update 보유과정 정산 비교 결과 저장
